option java_outer_classname = "LCDeleteRouteAlarm";
option java_package = "com.navinfo.opentsp.platform.location.protocol.terminal.setting";

message DeleteRouteAlarm{
	repeated int64 areaIdentify = 1;
}